@@ -1,7 +1,10 @@
 
   ChangeLog for the eggleton-tools tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
-    
+   
+   118: AstroFloyd, 24/07/2010
+      - listmod: add jf, doxygen comments
+      
    114-117: AstroFloyd, 22/07/2010
       - listmdl: remove some archaic Fortran, stick things into subroutines
    
